# transfermarkt

./: .flake8  .gitignore  CHANGELOG.md  README.md  player_dump.py  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
.github/workflows/: ci.yml  pylint.yml  python-publish.yml  test.yml
cli/commands/: competition.py  player.py  team.py
tests/unit/transfermarket/: test_market.py
tests/unit/transfermarket/common/: test_currency.py  test_gender.py  test_utils.py
tests/unit/transfermarket/models/: test_club.py  test_competition.py  test_domain.py  test_meta.py  test_player.py  test_team.py
tests/unit/transfermarket/page/: test_competitions.py  test_home.py  test_object.py  test_player.py  test_utils.py
tests/unit/transfermarket/services/: test_currency.py  test_market.py
tests/unit/transfermarkt/: test_market.py
tests/unit/transfermarkt/common/: test_currency.py  test_gender.py  test_utils.py
tests/unit/transfermarkt/models/: test_club.py  test_competition.py  test_domain.py  test_meta.py  test_player.py  test_team.py
tests/unit/transfermarkt/page/: test_home.py  test_object.py  test_player.py  test_utils.py
tests/unit/transfermarkt/services/: test_currency.py
transfermarket/: __init__.py  market.py
transfermarkt/: __init__.py  market.py
transfermarkt/common/: currency.py  gender.py  utils.py
transfermarkt/models/: club.py  competition.py  domain.py  meta.py  player.py  team.py
transfermarkt/page/: competitions.py  home.py  object.py  player.py  utils.py
transfermarkt/services/: currency.py  currency_service.py  market.py
