[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "transfermarkt_ocrosby"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A python module for retrieving information from https://www.transfermarkt.com."
readme = "README.md"
requires-python = ">=3.10.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent"
]
keywords = [
    "transfermarkt",
    "football",
    "soccer",
    "football club",
    "football player",
    "football manager",
    "football league",
    "football competition",
    "football transfer",
    "football statistics",
    "football data"
]

[project.urls]
"Homepage" = "https://github.com/ocrosby/transfermarkt"
"Bug Tracker" = "https://github.com/ocrosby/transfermarkt/issues"
"Target URL" = "https://www.transfermarkt.com"

[tool.poetry]
name = "transfermarkt"
version = "0.0.0"
description = "A python module for retrieving information from https://www.transfermarkt.com."
authors = ["Omar Crosby <omar.crosby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
coverage = "^6.4.4"
flake8 = "^5.0.4"
radon = "^5.1.0"
invoke = "^1.7.3"
requests-mock = "^1.9.3"

[tool.flake8]
ignore = ['C901', 'W503']
max-line-length = 88
exclude = ['.env', '.venv', '.env', 'env', 'migrations', '__pycache__', 'manage.py', 'settings.py']
